--- a/package.json
+++ b/package.json
@@ -2,7 +2,37 @@
   "name": "md-links",
   "version": "0.1.0",
   "dependencies": {
+    "eslint-plugin-jest": "^22.7.1",
     "filehound": "^1.17.0",
+    "jest": "^24.8.0",
     "marked": "^0.6.2"
-  }
+  },
+  "description": "[Markdown](https://es.wikipedia.org/wiki/Markdown) es un lenguaje de marcado\r ligero muy popular entre developers. Es usado en muchísimas plataformas que\r manejan texto plano (GitHub, foros, blogs, ...), y es muy común\r encontrar varios archivos en ese formato en cualquier tipo de repositorio\r (empezando por el tradicional `README.md`).",
+  "main": "index.js",
+  "directories": {
+    "test": "test"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Relun/SCL009-md-links.git"
+  },
+  "keywords": [
+    "node",
+    "markdown",
+    "libreria",
+    "js"
+  ],
+  "author": "Claudia Araya",
+  "license": "ISC",
+  "bin": {
+    "md-links": "index.js"
+  },
+  "bugs": {
+    "url": "https://github.com/Relun/SCL009-md-links/issues"
+  },
+  "homepage": "https://github.com/Relun/SCL009-md-links#readme"
 }
