--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "dependencies": {
     "eslint-plugin-jest": "^22.7.1",
     "filehound": "^1.17.0",
-    "jest": "^24.8.0",
     "marked": "^0.6.2"
   },
   "description": "[Markdown](https://es.wikipedia.org/wiki/Markdown) es un lenguaje de marcado\r ligero muy popular entre developers. Es usado en muchísimas plataformas que\r manejan texto plano (GitHub, foros, blogs, ...), y es muy común\r encontrar varios archivos en ese formato en cualquier tipo de repositorio\r (empezando por el tradicional `README.md`).",
@@ -12,7 +11,9 @@
   "directories": {
     "test": "test"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "jest": "^24.8.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
