--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "clau-md-links",
   "version": "0.1.0",
   "dependencies": {
+    "eslint": "^6.0.1",
     "eslint-plugin-jest": "^22.7.1",
     "filehound": "^1.17.0",
     "marked": "^0.6.2"
@@ -15,7 +16,7 @@
     "jest": "^24.8.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --coverage"
   },
   "repository": {
     "type": "git",
