--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "dependencies": {
     "eslint": "^6.0.1",
     "eslint-plugin-jest": "^22.7.1",
+    "fetch": "^1.1.0",
     "filehound": "^1.17.0",
-    "marked": "^0.6.2"
+    "marked": "^0.6.2",
+    "node-fetch": "^2.6.0",
+    "path": "^0.12.7"
   },
   "description": "[Markdown](https://es.wikipedia.org/wiki/Markdown) es un lenguaje de marcado\r ligero muy popular entre developers. Es usado en muchísimas plataformas que\r manejan texto plano (GitHub, foros, blogs, ...), y es muy común\r encontrar varios archivos en ese formato en cualquier tipo de repositorio\r (empezando por el tradicional `README.md`).",
   "main": "index.js",
